Revision history for Crypt-Passphrase

{{$NEXT}}
          - Add a unicode normalization option
          - Match MD5 and SHA hex case-insensitively

0.006     2023-02-08 01:36:27+01:00 Europe/Amsterdam
          - Add Crypt::Passphrase::MD5::Hex
          - Add Crypt::Passphrase::SHA1::Hex
          - Add Crypt::Passphrase::PassphraseHash

0.005     2022-12-26 17:56:04+01:00 Europe/Amsterdam
          - Cache accepted hashes for crypt validators
          - Never accept undefined hashes

0.004     2021-12-29 02:25:52+01:00 Europe/Amsterdam
          - Use Crypt::URandom for randomness

0.003     2021-03-11 20:50:59+01:00 Europe/Amsterdam
          - Fix password encoding to utf8

0.002     2021-03-11 19:54:06+01:00 Europe/Amsterdam
          - Normalize passwords before hashing them

0.001     2021-03-07 23:13:38+01:00 Europe/Amsterdam
          Initial release to an unsuspecting world